fix z-index for glow being at the back of the next circles

--- a/src/views/dashboard/heading.css
+++ b/src/views/dashboard/heading.css
@@ -4,6 +4,7 @@ v-dashboard img.me{
 	user-select: none;
 	user-drag: none;
 	-webkit-user-drag: none;
+	z-index: 1200;
 
 
 
